[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agent-memory-mcp"
version = "1.0.0"
description = "Persistent key-value memory for AI agents — MCP server with TTL, namespaces, and search."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/nousresearch/agent-memory-mcp"
Repository = "https://github.com/nousresearch/agent-memory-mcp"

[tool.setuptools]
py-modules = ["server"]
